# state_machine_transformation

./: CMakeLists.txt  Determinization.h  Make_one_letter_moves.h  Miniminization.h  My_bitset.h  README.md  Reg_expr_to_state_machine.h  State_machine.h  State_machine_to_reg_expr.h  main.cpp  tests.cpp
libs/: CMakeLists.txt  Determinization.cpp  Determinization.h  Make_one_letter_moves.cpp  Make_one_letter_moves.h  Minimization.cpp  Minimization.h  My_bitset.cpp  My_bitset.h  Reg_expr_to_state_machine.cpp  Reg_expr_to_state_machine.h  State_machine.cpp  State_machine.h  State_machine_to_reg_expr.cpp  State_machine_to_reg_expr.h
tests/: Determinization_test_1.in  Determinization_test_1.out  Determinization_test_2.in  Determinization_test_2.out  Determinization_test_3.in  Determinization_test_3.out  Minimization_test_1.in  Minimization_test_1.out  Minimization_test_2.in  Minimization_test_2.out  State_machine_to_reg_expr_test_1.in  State_machine_to_reg_expr_test_2.in  reg_to_machine_test_1.out  reg_to_machine_test_2.out  reg_to_machine_test_3.out  reg_to_machine_test_4.out  reg_to_machine_test_5.out
